Changed the Makefiles for mac, and removed assignment 12 files

--- a/Assignments/cpp-assignment-10/Makefile
+++ b/Assignments/cpp-assignment-10/Makefile
@@ -1,105 +1,116 @@
-# Directories, include, lib,
-!if defined(DEBUG_BUILD)
-LIB_TYPE = Debug
-EXECUTABLE = debug
-BUILDDIR = debug
-!else
-LIB_TYPE = Release
-EXECUTABLE = release
-BUILDDIR = release
-!endif
+# Name of the executable
+EXECUTABLE := program
 
-TDT4102_DIR = "%AppData%/tdt4102/tdt4102"
-GRAPH_LIB_DIR = $(TDT4102_DIR)/Graph_lib
-FLTK_LIB_DIR = $(TDT4102_DIR)/FLTK-1.4/lib/$(LIB_TYPE)
+# Library path
+GRAPH_LIB_DIR := $(HOME)/Library/tdt4102/Graph_lib
+GRAPH_LIB_INCLUDE := $(GRAPH_LIB_DIR)/include
+GRAPH_LIB_LIB := $(GRAPH_LIB_DIR)/lib
 
-GRAPH_LIB_INCLUDE = $(GRAPH_LIB_DIR)/include
-FLTK_INCLUDE = $(TDT4102_DIR)/FLTK-1.4
+FLTK_DIR := $(HOME)/Library/tdt4102/FLTK
+FLTK_INCLUDE := $(FLTK_DIR)/include
+FLTK_LIB := $(FLTK_DIR)/lib
 
-TDT4102_INCLUDE = $(TDT4102_DIR)/TDT4102
+TDT4102_DIR := $(HOME)/Library/tdt4102/TDT4102
+TDT4102_INCLUDE := $(TDT4102_DIR)
 
-GRAPH_LIB_LIBRARIES = $(GRAPH_LIB_DIR)/lib/$(LIB_TYPE)/*.lib
-FLTK_LIBRARIES = $(FLTK_LIB_DIR)/*.lib
-WIN_LIBRARIES = wsock32.lib comctl32.lib kernel32.lib user32.lib gdi32.lib \
-				winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib \
-				oleaut32.lib uuid.lib odbc32.lib odbccp32.lib
 
-# Compiler and linker config
-CXX = clang-cl
-CXXFLAGS = /std:c++17 -TP -m64 -fdiagnostics-absolute-paths /W4 /GR \
-			/DEBUG /INCREMENTAL /nologo /EHsc \
-			-I$(GRAPH_LIB_INCLUDE) \
-			-I$(FLTK_INCLUDE) \
-			-I$(TDT4102_INCLUDE)
-DEBUG = /Od /Ob0 -DWIN32 /MDd /Zi /RTC1
-RELEASE = /O2 /Ob2 -DNDEBUG -DWIN32_LEAN_AND_MEAN /MD
-MACROS = -D_WINDOWS -DNOGDI -D_CRT_SECURE_NO_WARNINGS
-DEBUGLD = /DEBUG /INCREMENTAL /Zi
-RELEASELD = /INCREMENTAL:NO
-LDFLAGS = -m64 $(GRAPH_LIB_LIBRARIES) $(FLTK_LIBRARIES) $(WIN_LIBRARIES)
+# Output directories
+DEBUG_OUT := Debug
+RELEASE_OUT := Release
+
+# Use clang as compiler and linker
+# Suppress false positive warnings
+CXX = clang++
+CXXFLAGS = -std=c++17 -Wall -Wno-overloaded-virtual -I$(GRAPH_LIB_INCLUDE) -I$(TDT4102_INCLUDE) --target=x86_64-apple-darwin-macho
+LDFLAGS = --target=x86_64-apple-darwin-macho
 LINK = $(CXX)
 
-!if defined(DEBUG_BUILD)
-CXXFLAGS = $(CXXFLAGS) $(DEBUG)
-LDFLAGS = $(LDFLAGS) $(DEBUGLD)
-!else
-CXXFLAGS = $(CXXFLAGS) $(RELEASE)
-LDFLAGS = $(LDFLAGS) $(RELEASELD)
-!endif
+# fltk-config returns compiler and linker flags needed to successfully
+# build fltk programs.
+CXXFLAGS += -I$(FLTK_INCLUDE) -I$(FLTK_INCLUDE)/FL/images -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -D_THREAD_SAFE -D_REENTRANT #$(shell fltk-config --use-images --cxxflags)
+LDFLAGS += -L$(FLTK_LIB) -lfltk_images -lfltk_jpeg -lfltk_png -lz -lfltk -lm -lpthread -framework Cocoa
 
-!ifndef EXECUTABLE
-EXECUTABLE = program
-!endif
+SOURCES := $(wildcard *.cpp)
+TDT4102_SOURCES := $(wildcard $(TDT4102_DIR)/*.cpp)
 
-SOURCES = *.cpp
+ifdef DEBUG
+CXXFLAGS += -g -O0 -DDEBUG
+OUT := $(DEBUG_OUT)
+GRAPH_LIB := Graph_libd
+else
+CXXFLAGS += -O3 -DNDEBUG
+OUT := $(RELEASE_OUT)
+GRAPH_LIB := Graph_lib
+endif
 
-SOURCES_BUILDDIR = $(BUILDDIR)\\sources
-TDT4102_BUILDDIR = $(BUILDDIR)\\tdt4102
+SOURCES_OUT = $(OUT)/sources
 
-SOURCES_OBJECTS = $(SOURCES_BUILDDIR)/$(SOURCES:.cpp=.obj)
-TDT4102_OBJECTS = $(TDT4102_BUILDDIR)/AnimationWindow.obj \
-				  $(TDT4102_BUILDDIR)/InputHandler.obj \
-				  $(TDT4102_BUILDDIR)/MoveableImage.obj \
-				  $(TDT4102_BUILDDIR)/ShapeDrawQueue.obj
+TDT4102_BUILDDIR = $(OUT)/TDT4102
+TDT4102_OBJECTS = $(TDT4102_BUILDDIR)/AnimationWindow.o $(TDT4102_BUILDDIR)/InputHandler.o $(TDT4102_BUILDDIR)/MoveableImage.o $(TDT4102_BUILDDIR)/ShapeDrawQueue.o
 
-# Inference rules, etc.
-.SUFFIXES: .obj .cpp
+GRAPH_LIB_BUILDDIR = $(OUT)/Graph_lib
+GRAPH_LIB_OBJECTS = $(GRAPH_LIB_BUILDDIR)/Graph.o $(GRAPH_LIB_BUILDDIR)/GUI.o $(GRAPH_LIB_BUILDDIR)/Window.o
 
-{.}.cpp{$(SOURCES_BUILDDIR)}.obj:
-	if not exist $(SOURCES_BUILDDIR) mkdir $(SOURCES_BUILDDIR)
-	$(CXX) $(CXXFLAGS) /c $< /Fo$(@D)/
+OBJECTS := $(SOURCES:%.cpp=$(SOURCES_OUT)/%.o) $(GRAPH_LIB_OBJECTS) $(TDT4102_OBJECTS)
 
-$(TDT4102_BUILDDIR):
-	if not exist $(TDT4102_BUILDDIR) mkdir $(TDT4102_BUILDDIR)
+$(OUT):
+	mkdir -p $@
 
-$(TDT4102_BUILDDIR)/AnimationWindow.obj: $(TDT4102_BUILDDIR)
-	$(CXX) $(CXXFLAGS) /c $(TDT4102_INCLUDE)/AnimationWindow.cpp /Fo$(@D)/
+# There is probably a better way to do this, but this works without any hassle
+$(TDT4102_BUILDDIR)/AnimationWindow.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(TDT4102_DIR)/AnimationWindow.cpp -o $@
 
-$(TDT4102_BUILDDIR)/InputHandler.obj: $(TDT4102_BUILDDIR)
-	$(CXX) $(CXXFLAGS) /c $(TDT4102_INCLUDE)/InputHandler.cpp /Fo$(@D)/
+$(TDT4102_BUILDDIR)/InputHandler.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(TDT4102_DIR)/InputHandler.cpp -o $@
 
-$(TDT4102_BUILDDIR)/MoveableImage.obj: $(TDT4102_BUILDDIR)
-	$(CXX) $(CXXFLAGS) /c $(TDT4102_INCLUDE)/MoveableImage.cpp /Fo$(@D)/
+$(TDT4102_BUILDDIR)/MoveableImage.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(TDT4102_DIR)/MoveableImage.cpp -o $@
 
-$(TDT4102_BUILDDIR)/ShapeDrawQueue.obj: $(TDT4102_BUILDDIR)
-	$(CXX) $(CXXFLAGS) /c $(TDT4102_INCLUDE)/ShapeDrawQueue.cpp /Fo$(@D)/
+$(TDT4102_BUILDDIR)/ShapeDrawQueue.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(TDT4102_DIR)/ShapeDrawQueue.cpp -o $@
 
-$(BUILDDIR)/$(EXECUTABLE).exe: $(SOURCES_OBJECTS) $(TDT4102_OBJECTS)
-	$(LINK) $(LDFLAGS) $(SOURCES_OBJECTS) $(TDT4102_OBJECTS) /Fe$@
-	@echo ...
-	@echo Successfully built ./$@
+$(GRAPH_LIB_BUILDDIR)/Graph.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(GRAPH_LIB_DIR)/src/Graph.cpp -o $@
 
-$(EXECUTABLE).exe: $(BUILDDIR)/$(EXECUTABLE).exe
+$(GRAPH_LIB_BUILDDIR)/GUI.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(GRAPH_LIB_DIR)/src/GUI.cpp -o $@
 
-# Catch-all, but can interfere with student's own files in build directory
-#rmdir /s /q $(BUILDDIR)
-clean:
-	@echo Cleaning the output files in $(BUILDDIR)
-	-del $(BUILDDIR)\$(EXECUTABLE).exe 2> NUL
-	-del $(BUILDDIR)\$(EXECUTABLE).pdb 2> NUL
-	-del $(BUILDDIR)\$(EXECUTABLE).ilk 2> NUL
-	-del $(SOURCES_BUILDDIR)\*.obj 2> NUL
-	if exist $(SOURCES_BUILDDIR) rmdir $(SOURCES_BUILDDIR)
-cleanall: cleandebug
-	-del $(TDT4102_BUILDDIR)\*.obj 2> NUL
-	if exist $(TDT4102_BUILDDIR) rmdir $(TDT4102_BUILDDIR)
+$(GRAPH_LIB_BUILDDIR)/Window.o:
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $(GRAPH_LIB_DIR)/src/Window.cpp -o $@
+
+$(SOURCES_OUT)/%.o: %.cpp
+	mkdir -p ./$(dir $(subst //,/,$@))
+	$(CXX) $(CXXFLAGS) -c $< -o $(subst //,/,$@)
+
+$(OUT)/$(EXECUTABLE): $(OUT) $(OBJECTS)
+	$(LINK) -g $(OBJECTS) -o $@ $(LDFLAGS)
+
+
+.PHONY: runrelease rundebug
+runrelease: release
+	./$(RELEASE_OUT)/$(EXECUTABLE)
+rundebug: debug
+	./$(DEBUG_OUT)/$(EXECUTABLE)
+
+.PHONY: clean cleandebug cleanrelease
+clean: cleanrelease cleandebug
+cleandebug:
+	$(RM) $(DEBUG_OUT)/$(EXECUTABLE)
+	$(RM) -r $(DEBUG_OUT)/sources
+cleanrelease:
+	$(RM) $(RELEASE_OUT)/$(EXECUTABLE)
+	$(RM) -r $(RELEASE_OUT)/sources
+
+# Helpers to build release and debug binaries
+.PHONY: debug release
+debug:
+	DEBUG=1 $(MAKE) $(DEBUG_OUT)/$(EXECUTABLE)
+release:
+	$(MAKE) $(RELEASE_OUT)/$(EXECUTABLE)
